--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
+server.port=8081
 #db
-spring.datasource.url=jdbc:mysql:localhost/faq-server
+spring.datasource.url=jdbc:mysql://localhost:3306/faq-server?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=521218
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 # redis
 # spring.redis.database=0
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6379
+#spring.redis.password=
 
-spring.redis.lettuce.pool.max-active=8
-spring.redis.lettuce.pool.max-wait=5000
-spring.redis.lettuce.pool.max-idle=8
-spring.redis.lettuce.pool.min-idle=0
-spring.data.redis.repositories.enabled=false
+#spring.redis.lettuce.pool.max-active=8
+#spring.redis.lettuce.pool.max-wait=5000
+#spring.redis.lettuce.pool.max-idle=8
+#spring.redis.lettuce.pool.min-idle=0
+#spring.data.redis.repositories.enabled=false
